--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,8 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p> Un site dédié à la collection de musique </p>
+		</div>
 	
 </body></html>
